# 1d1python

./: .deepsource.toml  .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  sider.yml  sonar-project.properties  test.sh  update_dependencies.sh
.github/workflows/: ci.yml
calculator/: function.py  tree.py
docker/: dev.Dockerfile  test.Dockerfile
docker/dev/: Dockerfile
docker/test/: Dockerfile
practice/: decorator.py
src/: calculator.py
src/boj/p15k/: p15667.py  p15734.py  p15780.py  p15781.py  p15784.py  p15820.py  p15917.py  p15921.py  p15953.py
src/boj/p16k/: p16431.py  p16503.py  p16504.py  p16673.py
src/boj/p17k/: p17144.py  p17174.py  p17210.py  p17263.py  p17450.py  p17496.py  p17614.py  p17618.py  p17944.py  p17945.py
src/boj/p18k/: p18127.py  p18247.py  p18856.py  p18883.py
src/boj/p19k/: p19572.py
src/boj/p20k/: p20053.py  p20361.py
src/boj/p21k/: p21312.py  p21603.py  p21866.py
src/boj/p23k/: p23348.py  p23794.py
src/calculator/: function.py
src/hacker_rank/algorithms/strings/: super_reduced_string.py
src/hacker_rank/data_structures/arrays/: dynamic_array.py  left_rotate.py
src/hacker_rank/interview_preparation_kit/array/: array_manipulation.py  ds_2d_array.py  left_rotate.py
src/hacker_rank/interview_preparation_kit/sorting/: comparator.py
src/hacker_rank/python/: basic_data_types.py  division.py  if_else.py  introduction.py  loops.py  sets.py  strings.py
src/hacker_rank/python/introduction/: arithmetic_operators.py  (+3 more)
src/hacker_rank/solve/: collect_max.py  delete_odd.py  frequency.py
src/practice/: decorator.py
src/programmers/practice/: hash.py
src/utils/: print.py
tests/: calculator_test.py
tests/boj/p15k/: test_p15667.py  test_p15734.py  test_p15780.py  test_p15781.py  test_p15784.py  test_p15820.py  test_p15917.py  test_p15921.py  test_p15953.py
tests/boj/p16k/: test_p16431.py  test_p16503.py  test_p16504.py  test_p16673.py
tests/boj/p17k/: test_p17144.py  test_p17174.py  test_p17210.py  test_p17263.py  test_p17450.py  test_p17496.py  test_p17614.py  test_p17618.py  test_p17944.py  test_p17945.py
tests/boj/p18k/: test_p18127.py  test_p18247.py  test_p18856.py  test_p18883.py
tests/boj/p19k/: test_p19572.py
tests/boj/p20k/: test_p20053.py  test_p20361.py
tests/boj/p21k/: test_p21312.py  test_p21603.py  test_p21866.py
tests/boj/p23k/: test_p23348.py  test_p23794.py
tests/calculator/: calculator_test.py  function_test.py
tests/hacker_rank/python/: arithmetic_operators_test.py  basic_data_types_test.py  division_test.py  hello_world_test.py  if_else_test.py  introduction_test.py  loops_test.py  sets_test.py  strings_test.py  test_basic_data_types.py  test_introduction.py  test_sets.py  test_strings.py
tests/hacker_rank/solve/: collect_max_test.py  delete_odd_test.py  frequency_test.py  test_delete_odd.py  test_frequency.py
tests/practice/: test_decorator.py
tests/programmers/practice/: hash_test.py  test_hash.py
tests/utils/: print_test.py  test_print.py
(+24 files in other folders)
