[project]
name = "1d1python"
version = "0.1.0"
description = "1 day 1 coding with python"
authors = [
    { name = "zrma", email = "zrma@1day1coding.com" }
]
requires-python = ">= 3.12"
license = "MIT"
homepage = "https://github.com/zrma/1d1python"
keywords = ["1 day 1 coding with python"]
readme = "README.md"

dependencies = [
    "attrs>=25.3.0",
    "cattrs>=24.1.3",
    "pydantic>=2.11.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "ruff-lsp>=0.0.62",
    "pre-commit>=4.2.0",
    "mypy>=1.15.0",
    "types-attrs>=19.1.0",
    "pytest>=8.3.5",
    "codecov>=2.1.13",
    "coveralls>=4.0.1",
    "coverage>=7.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_1d1python"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
line_length = 120

[tool.ruff]
line-length = 120
