[project]
name = "1d1python"
version = "0.1.0"
description = "1 day 1 coding with python"
authors = [
    { name = "zrma", email = "zrma@1day1coding.com" }
]
requires-python = ">= 3.12"
license = "MIT"
homepage = "https://github.com/zrma/1d1python"
keywords = ["1 day 1 coding with python"]
readme = "README.md"

dependencies = [
    "attrs>=26.1.0",
    "cattrs>=26.1.0",
    "pydantic>=2.13.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pandera>=0.31.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ruff-lsp>=0.0.62",
    "pre-commit>=4.6.0",
    "mypy>=1.20.2",
    "types-attrs>=19.1.0",
    "pytest>=9.0.3",
    "codecov>=2.1.13",
    "coveralls>=4.1.0",
    "coverage>=7.13.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_1d1python"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
line_length = 120

[tool.ruff]
line-length = 120
